Closed Bug 1637636 Opened 5 years ago Closed 5 years ago

Enabling transport-cc breaks simulcast

Categories

(Core :: WebRTC: Audio/Video, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla78
Tracking Status
firefox-esr68 --- unaffected
firefox76 --- unaffected
firefox77 --- disabled
firefox78 --- fixed

People

(Reporter: dminor, Assigned: dminor)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

It looks like only one of the three streams is being sent.

Does not reproduce if I comment out the call to receive_side_cc_.OnReceivedPacket() at: https://searchfox.org/mozilla-central/source/media/webrtc/trunk/webrtc/call/call.cc#1467-1469.

Initial guess is that only one stream is being allocated bandwidth.

Assignee: nobody → dminor
Severity: S2 → S3

Set release status flags based on info from the regressing bug 1625803

Filed Bug 1637971 to see if we can improve testing around this.

In order for the SendSideCongestionController to work properly, it needs the
timestamp at which the packets were sent. This is set by calling
Call::OnSentPacket when a packet is sent. Without the sent timestamp, it drops
the estimated available bandwidth so low that only one simulcast stream will
be allocated any bandwidth.

Pushed by dminor@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/731d0c1c3adf Add callback to Call::OnSentPacket in conduits; r=ng
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla78
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: