Bug 1637636 - Add callback to Call::OnSentPacket in conduits; r=ng

In order for the SendSideCongestionController to work properly, it needs the
timestamp at which the packets were sent. This is set by calling
Call::OnSentPacket when a packet is sent. Without the sent timestamp, it drops
the estimated available bandwidth so low that only one simulcast stream will
be allocated any bandwidth.

Differential Revision: https://phabricator.services.mozilla.com/D75310